static/css/base.css
body {
    background-color: #f8f8f8;
}

header {
    margin-top: 100px;
}

.message-container {
    position: fixed;
    top: 95px;
    right: 15px;
    z-index: 99999999999;
}

.toast-header, .toast-body {
    background-color: white;
}

.header-success {
    border-top: 4px solid #25A743;
}

.header-warning {
    border-top: 4px solid #FFC008;
}

.header-error {
    border-top: 4px solid #DC3545;
}

.header-info {
    border-top: 4px solid #14A2B8;
}

.search-panel {
    position: fixed;
    top: 90px;
    z-index: 15;
}

.search-input {
    font-size: 0.9em;
}

a {
    text-decoration: none;
}

.sub-link:hover {
    text-decoration: underline;
}

.hero-img {
    object-fit: contain;
    width: 100%;
}

.muted-nav {
    text-decoration: none;
    color: gray;
}

.muted-nav:hover {
    color: black;
}

.account-nav {
    text-decoration: none;
    padding: 8px;
    border: 2px solid black;
    background-color: white;
    color: black;
    border-radius: 5px;
}

.btn-signup {
    text-decoration: none;
    border-radius: 5px;
}

.mobile-nav-item {
    max-width: 300px;
}

.account-nav:hover {
    background-color: black;
    color: white;
}

#nav {
    /* background-color: #F9C620; */
    background-color: white;
    min-height: 75px;
    border-bottom: 2px solid;
    border-image-slice: 1;
    border-width: 4px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 10;
}

#logo {
    /* background-color: black; */
    /* border: 2px solid;
    border-image-slice: 1;
    border-width: 2px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1)); */
}

.title-code {
    font-family: 'Do Hyeon', sans-serif;
    font-size: 1.2em;
    /* color: #F9C620; */
    color: black;
    letter-spacing: 2px;
}

.title-companion {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1.3em;
    /* color: #F9C620; */
    /* color: black; */
    /* color: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgba(0,180,251,1) 100%); */
    background: #BB00E8;
    background: -webkit-linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    background: -moz-linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    background: linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    /* font-style: italic; */
}

#hero {
    height: 100vh;
}

/* .hero-text {
    font-size: 4em;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 700;
    letter-spacing: -4px;
    word-spacing: -10px;
    text-transform: uppercase;
    line-height: 0.8em;
} */

/* .hero-highlight {
    color: #F9C620;
    background-color: black;
    padding-top: 15px;
    padding-right: 10px;
    line-height: 1.25em;
} */

.hero-underline {
    text-decoration: underline;
    -webkit-text-decoration-color: #F9C620; /* Safari */  
    text-decoration-color: #F9C620;
}

.btn-hero {
    background: rgb(171,29,224);
    background: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgba(0,180,251,1) 100%);
    color: white;
    font-weight: 500;
    padding: 12px 22px;
    border: none;
}

.btn-hero:hover {
    color: #F9C620;
}

.signup-combo {
    max-width: 500px;
}

@media only screen and (max-width: 576px) {
    #hero-signup {
        width: 100%;
        margin-bottom: 10px;
    }

    #hero-btn {
        border-radius: 5px 5px 5px 5px;
    }
}

.company-logo {
    max-width: 100px;
    height: 50px;
    object-fit: contain;
}

.services-bg {
    /* background-color: #F9C620; */
    background: rgb(171,29,224);
    background: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgba(0,180,251,1) 100%);
    padding: 15px;
}

.service-card {
    background-color: white;
    /* border: 2px solid;
    border-image-slice: 1;
    border-width: 4px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1)); */
    border-radius: 5px;
    height: 100%;
}

.service-detail {
    background-color: white;
    border: none;
}

.service-points {
    font-size: 14px;
    text-align: left;
}

.service-description {
    height: 135px;
}

.testimonial-block {
    background-color: white;
    padding: 15px;
    /* border-radius: 25px; */
    border: 2px solid;
    border-image-slice: 1;
    border-width: 2px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
}

.stay-together {
    display: inline-block;
}

.service-container {
    border: 2px solid;
    border-image-slice: 1;
    border-width: 2px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
    border-radius: 10px;
    background-color: white;
    padding: 10px;
}

.img-quote {
    border-radius: 50%;
}

.update-link, .remove-item {
    cursor: pointer;
}

footer {
    color: white;
}

